--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,8 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
   </head>
   <body>
-    <%= render 'flashes' %>
+    <p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
   </body>
