--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,7 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
   </head>
   <body>
-    <p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+    <%= render 'layouts/flashes' %>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
   </body>
