Add general css rules

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,11 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
-$blue: #469AE0;
+$red: rgba(250, 92, 100, 1);
+$blue: rgba(34, 79, 109, 1);
 $yellow: #FDB631;
 $orange: #E67E22;
-$green: #32B796;
+$green: rgba(80, 227, 194, 1);
 $gray: #000000;
-$light-gray: #F4F4F4;
+$light-gray: rgba(216, 216, 216, 0.3);
+$white: rgba(255, 255, 255, 0.9);
