--- a/app/views/babies/index.html.erb
+++ b/app/views/babies/index.html.erb
@@ -2,10 +2,9 @@
   <div class="row">
     <div class="col-xs-12 col-sm-4"></div>
 
-    <h1>The best place to book a Baby</h1>
-    <p>We have selected the strongest, cutest and cleanest babies from all around the world for you</p>
+    <h1 class="text-center">The best place to book a Baby</h1>
+    <p class="text-center">We have selected the strongest, cutest and cleanest babies from all around the world for you</p>
 
     <%= render "babies/card" %>
   </div>
-</div>
 </div>
