--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,6 +6,10 @@
   color: white;
   position: relative;
 }
+.card h1 {
+  color: $white;
+  font-family: 'Montserrat', sans-serif;
+}
 
 .card-container:hover {
   padding-top: 5px;
@@ -40,12 +44,12 @@
 }
 .card-description {
   position: absolute;
-  bottom: 10px;
+  top: 105px;
   left: 10px;
 }
 .card-price {
   position: absolute;
-    bottom: 3px;
+    bottom: 5px;
     right: 10px;
 
 }
