Add a banner for the home page

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,11 +1,11 @@
 // Define variables for your color scheme
 
 // For example:
-$red: rgba(250, 92, 100, 1);
-$blue: rgba(34, 79, 109, 1);
+$red: rgb(250, 92, 100);
+$blue: rgb(34, 79, 109);
 $yellow: #FDB631;
 $orange: #E67E22;
-$green: rgba(80, 227, 194, 1);
+$green: rgb(55, 224, 183);
 $gray: #000000;
 $light-gray: rgba(216, 216, 216, 0.3);
 $white: rgba(255, 255, 255, 0.9);
