--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,30 @@
-// Specific CSS for your home-page
+.container {
+}
+
+.banner {
+  color: white;
+  position:fixed;
+  top:0px;left:0px;width:100%;
+  height:100%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner-content {
+  font-weight: bold;
+  color: rgba(255,255,255, 0.85);
+}
+
+.banner-content p {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+h1 {
+  color: $green;
+}
+
+h1:hover {
+  color: $red;
+}
