--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,15 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <center>
+        <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('http://res.cloudinary.com/poloduf/image/upload/v1511868145/iey2ekuruyw10tttbj9z.jpg');">
+          <div class="banner-content">
+            <h1>Welcome on Babynb</h1>
+            <p>Click on the link below to see all the baby for rent</p>
+           <%= link_to 'See all the Babies', babies_path, class: 'btn btn-danger btn-lg' %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</center>
