--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -19,7 +19,7 @@
   height: 250px;
   padding:10px;
   transition: all 0.3s ease;
-  border-radius: 1px;
+  border-radius: 5px;
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
   margin-bottom: 15px;
 }
@@ -60,7 +60,7 @@
 }
 
 .card-description h1 {
-  font-size: 24px;
+  font-size: 18px;
 }
 
 .card-link {
@@ -72,9 +72,14 @@
   z-index: 2;
   background: black;
   opacity: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .card-link:hover {
-  opacity: 0.1;
+  opacity: 0.6;
+  background-color: $green;
+  text-decoration: none;
 }
 .card-footer {
   display: flex;
@@ -92,13 +97,13 @@
   align-items: center;
 }
 .card-footer .controls a {
- color: #37e0b7;
+ color: $green;
  padding: 5px;
 }
 .footer-info {
   line-height: 15px;
 }
 .footer-info i {
-  color: #37e0b7;
+  color: $green;
   padding-right: 10px;
 }
