--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,8 @@
 <div class="navbar-wagon">
   <!-- Logo -->
+  <%= link_to babies_path do %>
   <%= image_tag('logo.png', size: '70x40', alt: 'logo', class: 'navbar-wagon-brand')%>
-
+  <% end %>
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
@@ -16,14 +17,19 @@
     <div class="navbar-wagon-item">
       <div class="dropdown">
 
-      <%= image_tag("profile.png", class: 'avatar dropdown-toggle', id: 'navbar-wagon-menu', data: { toggle: 'dropdown' }) %>
+      <% if current_user %>
+        <% if current_user.photo.url.nil? %>
+            <%= image_tag('user.png', class: 'avatar dropdown-toggle',alt: 'profile-picture', id: 'navbar-wagon-menu', data: { toggle: 'dropdown' }) %>
+        <% else %>
+          <%= image_tag(current_user.photo, class: 'avatar dropdown-toggle',alt: 'profile-picture', id: 'navbar-wagon-menu', data: { toggle: 'dropdown' }) %>
+        <% end %>
+      <% end %>
 
-        <img src="https://kitt.lewagon.com/placeholder/users/ssaunier" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
-        <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><a href="#">Profile</a></li>
-          <li><a href="#">Dashboard</a></li>
-          <li><a href="#">Log Out</a></li>
-        </ul>
+          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Settings</a></li>
+            <li><a href="#">Log Out</a></li>
+          </ul>
       </div>
     </div>
   </div>
@@ -33,9 +39,19 @@
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Becomes owner</a></li>
-        <li><a href="#">My bookings</a></li>
-        <li><a href="#">Add a baby</a></li>
+        <% if current_user %>
+          <li><a href="#">Becomes owner</a></li>
+          <li><a href="#">My bookings</a></li>
+          <li><a href="#">Add a baby</a></li>
+          <li><a href="#">Profile</a></li>
+          <li><a href="#">Settings</a></li>
+          <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
+
+        <% else %>
+          <li><a href="#">Becomes owner</a></li>
+          <li><a href="#">Book a baby</a></li>
+          <li><%= link_to 'Log in', new_user_session_path %></li>
+        <% end %>
       </ul>
     </div>
   </div>
