Fix the size of fa symbole in the home page css

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -41,15 +41,15 @@
   opacity: 0.7;
 }
 
-.fa-lock {
+.features .fa-lock {
   font-size: 60px;
 }
 
-.fa-check-square-o {
+.features .fa-check-square-o {
   font-size: 60px;
 }
 
-.fa-heart {
+.features .fa-heart {
   font-size: 60px;
 }
 
