change color of the card hover

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -77,8 +77,8 @@
   justify-content: center;
 }
 .card-link:hover {
-  opacity: 0.6;
-  background-color: $green;
+  opacity: 0.5;
+  background-color: $white;
   text-decoration: none;
 }
 .card-footer {
