--- a/app/views/babies/_card.html.erb
+++ b/app/views/babies/_card.html.erb
@@ -10,7 +10,7 @@
             <div class="card-price">
             <p><%= baby.price %><i class="fa fa-eur" aria-hidden="true"></i></p>
             </div>
-           <a class="card-link" href="#"><button type="button" class="btn btn-danger">Book <%= baby.firstname.capitalize %></button></a>
+           <a class="card-link" href="#"><button type="button" class="btn btn-primary">Book <%= baby.firstname.capitalize %></button></a>
           </div>
           <div class="card-footer">
             <div class="footer-info">
