Remove the navbar from the homepage in the home html

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
+ <style>
+    .navbar-wagon { display: none; }
+ </style>
+
 <div class="container">
   <div class="row">
     <div class="banner" style="background-image: linear-gradient(-225deg, rgba(250, 92, 100,0.8) 0%, rgba(0,36,61,0.6) 50%), url('http://res.cloudinary.com/poloduf/image/upload/v1511963751/pexels-photo-206347-1_qhywyq.jpg');">
