Add proper links in navbar + better signup page

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,15 +7,11 @@
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
     <% if current_user %>
-      <a href="" class="navbar-wagon-item navbar-wagon-link">Becomes owner</a>
+      <%= link_to 'Manage my bookings', account_bookings_path, class: 'navbar-wagon-item navbar-wagon-link' %>
 
-      <%= link_to 'My bookings', account_bookings_path, class: 'navbar-wagon-item navbar-wagon-link' %>
-
-      <%= link_to 'Add a baby', new_account_baby_path, class: 'navbar-wagon-item navbar-wagon-link' %>
+      <%= link_to 'Manage my babies', account_babies_path, class: 'navbar-wagon-item navbar-wagon-link' %>
     <% else %>
-      <a href="" class="navbar-wagon-item navbar-wagon-link">Becomes owner</a>
-
-      <%= link_to 'My bookings', account_bookings_path, class: 'navbar-wagon-item navbar-wagon-link' %>
+      <%= link_to 'Add bookings', account_bookings_path, class: 'navbar-wagon-item navbar-wagon-link' %>
 
       <%= link_to 'Add a baby', new_account_baby_path, class: 'navbar-wagon-item navbar-wagon-link' %>
 
@@ -36,7 +32,7 @@
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <% if current_user %>
               <li><a href="#">Profile</a></li>
-              <li><a href="#">Settings</a></li>
+              <li><%= link_to 'Settings', edit_user_registration_path %></li>
               <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
             <% else %>
               <li><a href="#">Book a baby</a></li>
@@ -54,16 +50,15 @@
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <% if current_user %>
-          <li><a href="#">Becomes owner</a></li>
-          <li><a href="#">My bookings</a></li>
-          <li><a href="#">Add a baby</a></li>
+          <li><%= link_to 'Manage my babies', account_babies_path, class: 'navbar-wagon-item navbar-wagon-link' %></li>
+          <li><%= link_to 'Manage my bookings', account_bookings_path, class: 'navbar-wagon-item navbar-wagon-link' %></li>
           <li><a href="#">Profile</a></li>
-          <li><a href="#">Settings</a></li>
+          <li><%= link_to 'Settings', edit_user_registration_path %></li>
           <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
 
         <% else %>
-          <li><a href="#">Becomes owner</a></li>
-          <li><a href="#">Book a baby</a></li>
+          <li><%= link_to 'Add bookings', account_bookings_path, class: 'navbar-wagon-item navbar-wagon-link' %></li>
+          <li><%= link_to 'Add a baby', new_account_baby_path, class: 'navbar-wagon-item navbar-wagon-link' %></li>
           <li><%= link_to 'Log in', new_user_session_path %></li>
         <% end %>
       </ul>
