--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,14 +1,18 @@
+.container {
+  width: 100%;
+  height: 100%;
+}
+
 .banner {
-  margin-top: 10px;
   color: #fff;
-  height:100%;
+  height:100vh;
   display:flex;
   justify-content: space-around;
   align-items: center;
   text-align: center;
   padding: 200px 0px;
   background-position: center;
-  box-shadow: 10px 10px 15px lightgrey;
+  position: relative;
 }
 
 .banner h1 {
@@ -80,3 +84,68 @@
   box-shadow: 2px 2px 2px lightgrey;
   border-radius: 50%;
 }
+
+// BUTTON SCROLL DOWN
+@bg: $green;
+@primary: $red; // Orange
+
+
+body { background-color: $green;}
+a { color: $green; text-decoration: none; }
+
+.arrow {
+  margin: 140px 0px 0px 220px;
+  position: absolute;
+  text-align: center;
+}
+.bounce {
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+
+.arrow .bounce {
+  align-items: center;
+}
+
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
+// DATE PICKER
+// [type="date"] {
+//   background:#fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png)  97% 50% no-repeat ;
+// }
+// [type="date"]::-webkit-inner-spin-button {
+//   display: none;
+// }
+// [type="date"]::-webkit-calendar-picker-indicator {
+//   opacity: 0;
+// }
+
+// /* custom styles */
+// body {
+//   padding: 4em;
+//   background: #e5e5e5;
+//   font: 13px/1.4 Geneva, 'Lucida Sans', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
+// }
+// label {
+//   display: block;
+// }
+// input {
+//   border: 1px solid #c4c4c4;
+//   border-radius: 5px;
+//   background-color: #fff;
+//   padding: 3px 5px;
+//   box-shadow: inset 0 3px 6px rgba(0,0,0,0.1);
+//   width: 190px;
+// }
