--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,8 @@
 .container {
   width: 100%;
   height: 100%;
+  margin: 0 auto;
+  padding: 0 auto;
 }
 
 .banner {
@@ -12,6 +14,7 @@
   text-align: center;
   padding: 200px 0px;
   background-position: center;
+  background-size: cover;
   position: relative;
 }
 
@@ -22,6 +25,8 @@
 .banner-content {
   font-weight: bold;
   color: rgba(255,255,255, 0.85);
+  margin: 0 auto;
+  padding: 0 auto;
 }
 
 .banner-content p {
@@ -85,6 +90,10 @@
   border-radius: 50%;
 }
 
+.features .row {
+  margin: 0 auto;
+}
+
 // BUTTON SCROLL DOWN
 @bg: $green;
 @primary: $red; // Orange
@@ -94,18 +103,17 @@ body { background-color: $green;}
 a { color: $green; text-decoration: none; }
 
 .arrow {
-  margin: 140px 0px 0px 220px;
-  position: absolute;
-  text-align: center;
+  opacity: 0.4;
 }
 .bounce {
-  -moz-animation: bounce 2s infinite;
-  -webkit-animation: bounce 2s infinite;
-  animation: bounce 2s infinite;
+  -moz-animation: bounce 1s infinite;
+  -webkit-animation: bounce 1s infinite;
+  animation: bounce 2.5s infinite;
 }
 
-.arrow .bounce {
-  align-items: center;
+.link-arrow {
+  position: absolute;
+  bottom: 2em;
 }
 
 
