--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -7,6 +7,14 @@
   height: 50px;
   border-radius: 50%;
 }
+
+.avatar-tlarge {
+  margin-top: 20px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
 .avatar-bordered {
   width: 30px;
   border-radius: 50%;
