fixes issues from the home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
     .navbar-wagon { display: none; }
  </style>
 
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(250, 92, 100,0.8) 0%, rgba(0,36,61,0.6) 50%), url('http://res.cloudinary.com/poloduf/image/upload/v1511963751/pexels-photo-206347-1_qhywyq.jpg');">
+<div class="homepage-banner" style="background-image: linear-gradient(-225deg, rgba(250, 92, 100,0.8) 0%, rgba(0,36,61,0.6) 50%), url('http://res.cloudinary.com/poloduf/image/upload/v1511963751/pexels-photo-206347-1_qhywyq.jpg');">
   <div class="banner-content text-center">
     <h1>Welcome on Babynb</h1>
     <p>Click on the link below to see all the baby for rent</p>
@@ -13,11 +13,11 @@
   </a>
 </div>
 <div id="features" class="features">
-  <h1 class="text-center"><a href="features">Features</a></h1>
+  <h1 class="text-center">Features</h1>
   <div class="row">
     <div class="col-xs-12 col-sm-4">
       <div class="text-center">
-        <div class="card">
+        <div class="homepage-card">
           <i class="fa fa-heart feature-red" aria-hidden="true"></i>
         </div>
         <h2>Find a baby</h2>
@@ -26,7 +26,7 @@
     </div>
     <div class="col-xs-12 col-sm-4">
       <div class="text-center">
-        <div class="card">
+        <div class="homepage-card">
          <i class="fa fa-check-square-o feature-blue" aria-hidden="true"></i>
        </div>
        <h2>Book it</h2>
@@ -35,7 +35,7 @@
     </div>
     <div class="col-xs-12 col-sm-4">
       <div class="text-center">
-        <div class="card">
+        <div class="homepage-card">
            <i class="fa fa-lock feature-green" aria-hidden="true"></i>
        </div>
        <h2>Secure your booking(s)</h2>
