--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,11 +1,4 @@
-.container {
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-  padding: 0 auto;
-}
-
-.banner {
+.homepage-banner {
   color: #fff;
   height:100vh;
   display:flex;
@@ -18,7 +11,7 @@
   position: relative;
 }
 
-.banner h1 {
+.banner-content h1 {
   color: $green;
 }
 
@@ -35,7 +28,7 @@
 }
 
 //FEATURES CARDS
-.card {
+.homepage-card {
   display: flex;
   align-items: center;
   text-align: center;
@@ -52,14 +45,17 @@
 
 .features .fa-lock {
   font-size: 60px;
+  color: white;
 }
 
 .features .fa-check-square-o {
   font-size: 60px;
+  color: white;
 }
 
 .features .fa-heart {
   font-size: 60px;
+  color: white;
 }
 
 .feature-red {
@@ -95,16 +91,15 @@
 }
 
 // BUTTON SCROLL DOWN
-@bg: $green;
-@primary: $red; // Orange
 
-
-body { background-color: $green;}
-a { color: $green; text-decoration: none; }
+// body { background-color: $green;}
+// a { color: $green; text-decoration: none; }
 
 .arrow {
+  color: $green;
   opacity: 0.4;
 }
+
 .bounce {
   -moz-animation: bounce 1s infinite;
   -webkit-animation: bounce 1s infinite;
