add some css to owner babies view

--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -2,8 +2,17 @@
   display: flex;
   align-items: center;
   padding: 20px;
-  border-bottom: 1px solid rgba(220,224,244,0.4);
+  border: 1px solid rgba(220,224,244,0.4);
+  transition: all 0.3s ease;
+  margin-top: 10px;
+  box-shadow: 0.5px 1px 4px $light-gray;
 }
+
+.message:hover {
+  background-color: $light-gray;
+  box-shadow: 0.5px 1px 4px $dark-gray;
+}
+
 .message:last-child {
   border-bottom: none;
 }
