--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -9,3 +9,4 @@ $green: rgb(55, 224, 183);
 $gray: #000000;
 $light-gray: rgba(216, 216, 216, 0.3);
 $white: rgba(255, 255, 255, 0.9);
+$dark-gray: rgba(150, 150, 150, 1)
