Add title to every pages

--- a/app/views/account/babies/index.html.erb
+++ b/app/views/account/babies/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, 'All your own babies | Babynb' %>
+
 <div class="container">
   <div class="fix-footer">
     <div class="text-center add-baby-button">
