--- a/app/views/account/bookings/index.html.erb
+++ b/app/views/account/bookings/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, 'All your booking request | Babynb' %>
+
 <div class="container">
   <div class="fix-footer">
     <% @bookings.each do |booking| %>
