--- a/app/views/babies/index.html.erb
+++ b/app/views/babies/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "Easy way to rent a baby | Babynb" %>
+
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-4"></div>
