--- a/app/views/babies/show.html.erb
+++ b/app/views/babies/show.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title, 'Want to book ' + @baby.firstname + '? | Babynb' %>
+
+
  <div class="container">
       <div class="profile text-center">
         <div class="main">
