--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, @profile.firstname + "'s profile | Babynb" %>
+
 <div class="container">
   <div class="fix-footer">
     <div class="row">
