--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -73,6 +73,7 @@
   <script type="text/javascript">
       $(function () {
           $('#starting_date').datetimepicker({
+              minDate: moment(),
               format: "YYYY-M-D"
             }
           );
